Покрыть оставшиеся эндпоинты тестами