@@ -1,5 +1,6 @@
 package server;
 
+import com.google.gson.reflect.TypeToken;
 import org.junit.jupiter.api.Test;
 import tasks.Status;
 import tasks.Task;
@@ -32,7 +33,7 @@ public class TaskHandlerTest extends HttpTaskServerTest {
         assertEquals(201, response.statusCode());
         List<Task> tasks = taskManager.printAllTasks();
         assertEquals(1, tasks.size());
-        assertEquals("Задача 1", tasks.get(0).getName());
+        assertEquals("Задача 1", tasks.getFirst().getName());
     }
 
     @Test
@@ -51,6 +52,28 @@ public class TaskHandlerTest extends HttpTaskServerTest {
         assertEquals(200, response.statusCode());
         Task task1 = gson.fromJson(response.body(), Task.class);
         assertEquals(task.getId(), task1.getId());
+    }
+
+    @Test
+    public void gettingAllTasks() throws Exception {
+        Task task = new Task(1, "Задача 1", "Описание задачи 1", Status.NEW,
+                LocalDateTime.now(),
+                Duration.ofMinutes(10));
+        Task task1 = new Task(1, "Задача 2", "Описание задачи 2", Status.NEW,
+                LocalDateTime.now().plusHours(1),
+                Duration.ofMinutes(10));
+        taskManager.newTask(task);
+        taskManager.newTask(task1);
+
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create("http://localhost:8080/tasks"))
+                .GET()
+                .build();
+        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+        List<Task> tasks = gson.fromJson(response.body(), new TypeToken<List<Task>>(){}.getType());
+
+        assertEquals(200, response.statusCode());
+        assertEquals(2, tasks.size());
     }
 
     @Test
@@ -89,5 +112,26 @@ public class TaskHandlerTest extends HttpTaskServerTest {
         HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
         assertEquals(200, response.statusCode());
         assertNull(taskManager.searchTaskByID(task.getId()));
+    }
+
+    @Test
+    public void deletingAllTasks() throws Exception {
+        Task task = new Task(1, "Задача 1", "Описание задачи 1", Status.NEW,
+                LocalDateTime.now(),
+                Duration.ofMinutes(10));
+        Task task1 = new Task(2, "Задача 2", "Описание задачи 2", Status.NEW,
+                LocalDateTime.now().plusHours(1),
+                Duration.ofMinutes(10));
+        taskManager.newTask(task);
+        taskManager.newTask(task1);
+
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create("http://localhost:8080/tasks"))
+                .DELETE()
+                .build();
+        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+
+        assertEquals(200, response.statusCode());
+        assertEquals(0, taskManager.printAllTasks().size());
     }
 }
